syntax = "proto3";

package envoy.config.listener.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.config.listener.v3";
option java_outer_classname = "InternalListenerProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#not-implemented-hide:]
// [#protodoc-title: internal listener]
// Describes a type of internal listener which expects to serve the cluster in
// the same envoy process.
message InternalListener {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.listener.v2.InternalListener";
}
