syntax = "proto3";

package envoy.extensions.bootstrap.internal_listener_registry.v3;

import "xds/annotations/v3/status.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.bootstrap.internal_listener_registry.v3";
option java_outer_classname = "InternalListenerRegistryProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/bootstrap/internal_listener_registry/v3;internal_listener_registryv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;
option (xds.annotations.v3.file_status).work_in_progress = true;

// [#protodoc-title: Internal Listener Registry]
// Internal Listener :ref:`overview <config_internal_listener>`.
// [#extension: envoy.bootstrap.internal_listener_registry]

// Configuration for internal listener registry.
message InternalListenerRegistry {
}
